# semgrep

./: .bentoignore  .codemapignore  .dockerignore  .envrc  .gitattributes  .gitbook.yaml  .gitignore  .gitmodules  .ocamlformat  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .semgrepignore  Brewfile  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  Dockerfile.wheels  INSTALL.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  SUMMARY.md  ast_generic.opam  bad.py  bin  code_of_conduct.md  commons.opam  contributing.md  debug  development.md  dune  dune-project  emma.py  emma_test.json  emma_test.py  (+39 more)
cli/: .test_durations  MANIFEST.in  Makefile  Pipfile  park.cfg  pyproject.toml  ruff.toml  semgrep-exe  setup.py
cli/dependencyparser/: find_lockfiles.py  package_restrictions.py  parse_lockfile.py
cli/scripts/: compare.py
cli/semgrep/: autofix.py  config_resolver.py  core_runner.py  dump_ast.py  evaluation.py  pattern.py  rule_match.py  semgrep_main.py  semgrep_types.py  test.py  util.py  version.py
cli/stubs/: astpretty.pyi  parsy.pyi  semgrep_bridge_python.pyi
cli/tests/: README.md  conftest.py  fixtures.py  metavariable_comparison.py  metavariable_comparison.yaml  public_repos.py  run-perf-tests.sh  semgrep_runner.py
dev/: dev.opam  optional.opam  required.opam
js/: Dockerfile  Main.ml  Makefile  README.md  core.js  dune
js/e2e/: Makefile  index.test.ts  package-lock.json  package.json  rules.json
js/engine/: .babelrc  Main.ml  Makefile  Makefile.include  Yaml_ctypes_overrides.ml  core.js  dune  entrypoint.js  entrypoint.test.js  fix-libyaml-offsets.py  package-lock.json  package.json  pcre-old.js  pcre.js  tsconfig.json
js/examples/: README.md  example-esm.html  index.html  yaml.html
js/language_server/: .mocharc.json  Main.ml  Makefile  XMLHttpRequest.js  dune  package-lock.json  package.json  script.sh  tsconfig.json  unix.js
js/languages/: Makefile  Makefile.include  README.md  package-lock.json  package.json
js/libpcre/: Makefile  Makefile.include  dune  package-lock.json  package.json  runtime.js  runtime.test.js
js/libpcre2/: Makefile  Makefile.include  dune  package-lock.json  package.json  runtime.js  runtime.test.js
js/libyaml/: Libyaml_stubs_js.ml  Makefile  Makefile.include  README.md  api.c  ctypes.js  dumper.c  dune  extra.c  libyaml.test.js  loader.c  package-lock.json  package.json  parser.c  runtime.js  runtime.test.js  tsconfig.json  writer.c  yaml.h  yaml.js
js/node_shared/: Semgrep_js_node_shared.ml  Semgrep_node_js_shared.ml  Semgrep_node_js_shared.mli  XMLHttpRequest.js  dune  unix.js
js/scripts/: build-libpcre.sh  build-semgrep-language.sh
js/shared/: Semgrep_js_shared.ml  Semgrep_js_shared.mli  core.js  dune  entrypoint.js  exported-functions.txt  exported-runtime-methods.txt  ocaml-tree-sitter.js  octs.js  post.js  pre.js  unix.js  webworker.js
js/tests/: Makefile  Test_jsoo.ml  dune  index.test.js  libpcre.test.js  package-lock.json  package.json  semgrep-bash.test.js
js/tree-sitter/: Makefile  Makefile.include
js/yaml_ctypes_overrides/: dune
languages/regexp/: AST.ml  AST.mli  Char_class.ml  Conf.mli  Dialect.mli  Dump.ml  Dump.mli  Lexer.mll  Parse.ml  Parse.mli  Unit_parsing.ml  dune
pfff/: .gitignore  Main.ml  Makefile  Makefile.common  README.md  architecture.txt  authors.txt  bugs.txt  changes.txt  configure  copyright.txt  credits.txt  design-choices.txt  env.sh  install.txt  install_linux.txt  install_macos.txt  install_windows.txt  main_codequery.ml  main_codeslicer.ml  main_db.ml  main_stags.ml  main_test.ml  opam.txt  pfff.opam  project.el  semgrep.yml  skip_list.txt  syncweb.txt
pfff/.circleci/: config.yml
pfff/commons/: Common.ml  Common.mli  Dumper.ml  Dumper.mli  META  Makefile.common  OCaml.ml  OCaml.mli  OUnit.ml  OUnit.mli  common2.ml  common2.mli  copyright.txt  credits.txt  file_type.ml  file_type.mli  map_.ml  map_.mli  readme.txt  set_.ml  set_.mli
pfff/commons_core/: ANSITerminal.ml  ANSITerminal.mli  compatibility.ml  concurrency.ml  console.ml  console.mli  distribution.ml  distribution.mli  features.ml.in  file_format.ml  graphic.ml  int.ml  interfaces.ml  logger.ml  logger.mli  macro.ml4  math.ml  math.mli  parallel.ml  parallel.mli  python.ml  python_ocaml.py  regexp.ml  unicode.ml
pfff/commons_ocollection/: oarray.ml  oarray.mli  oassoc.ml  oassoc.mli  oassoc_buffer.ml  oassoc_buffer.mli  oassoc_cache.ml  oassocb.ml  oassoch.ml  oassocid.ml  objet.ml  objet.mli  ocollection.ml  ocollection.mli  ofullcommon.ml  ograph.ml  ograph.mli  ograph2way.ml  ograph2way.mli  ograph_extended.ml  ograph_extended.mli  ograph_simple.ml  ograph_simple.mli  osequence.ml  osequence.mli  oset.ml  oset.mli  osetb.ml  oseth.ml  oseti.ml  osetpt.ml  setPt.ml  seti.ml
pfff/commons_wrappers/: Makefile
pfff/demos/: Makefile  analyze_chain.ml  chain.php  foo.js  foo.php  foo2.php  foo3.php  interpreter.php  interpreter2.php  pfff_linking.ml  (+10 more)
semgrep/: MANIFEST.in  Makefile  Pipfile  README.md  build.sh  eqeq-for-me.yaml  foo.py  graph_code_pyh.marshall  interface.proto  message-override-test.kt  message-override-test.yaml  pattern-addr-test.js  pattern-addr-test.yaml  pyproject.toml  pytest-core  requirements.txt  semgrep.yml  setup.py  sgrep-lint  skip_list.txt  taint-sinks.yaml  taint-sources.yaml  taint-test.py  taint-test.yaml  test.py  tox.ini
semgrep-core/: .gitignore  .ocamlformat  Makefile  debug  dune  dune-project  log_config.json.ex1  log_config.json.ex2  semgrep.opam  semgrep.yml  sgrep.opam  skip_list.txt  spacegrep.opam  test  tree-sitter.opam
sgrep_lint/: Makefile  __main__.py  build.sh  config_resolver.py  constants.py  evaluation.py  pyproject.toml  requirements.txt  setup.py  sgrep-lint  sgrep.py  sgrep_main.py  sgrep_types.py  test.py  util.py
spacegrep/: .ocp-indent  Makefile  README.md  dune  dune-project  spacegrep.opam
tests/: README.md  Test.ml  big_taint.rb  debug-2.rb  debug-3.rb  debug-4.rb  debug-5.rb  debug-6.rb  debug.rb  debug.yaml  dune  generate.py  neg_op_lit_equiv.c  report_test_metrics.sh  stats.html  test.ml
(+20742 files in other folders)
