opam-version: "2.0"
name: "ast_generic"
version: "1.8.0"
synopsis: "Abstract Syntax Tree (AST) supporting 31 programming languages"
description: """
This is a library defining a generic AST to factorize similar
analysis on different programming languages
(e.g., naming, semantic code highlighting, semgrep matching).

Right now this generic AST is mostly the factorized union of the ASTs of:
 - Python, Ruby, Lua, Julia, Elixir
 - Javascript, Typescript, Vue
 - PHP, Hack
 - Java, CSharp, Kotlin
 - C, C++
 - Go
 - Swift
 - OCaml, Scala, Rust
 - Clojure, Lisp, Scheme
 - R
 - Solidity
 - Bash, Docker
 - JSON, YAML, HCL, Jsonnet

This is a core library used by Semgrep but which can be of use in other
projects. This AST is also specified using ATD and so can be leveraged
from other programming languages such as Typescript, Java, Scala, and
the other programming languages supported by atdgen.
"""

maintainer: "Yoann Padioleau <pad@r2c.dev>"
authors: [ "Yoann Padioleau <pad@r2c.dev>" ]
license: "LGPL-2.1-only"
homepage: "https://semgrep.dev"
dev-repo: "git+https://github.com/returntocorp/semgrep"
bug-reports: "https://github.com/returntocorp/semgrep/issues"

depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "3.2.0" }
  "commons" {>= "1.8.0"}
  "lib_parsing" {>= "1.5.5"}
  "profiling" {>= "1.5.5"}
  "atdgen" {>= "2.8.0" }
]

build: ["dune" "build" "-p" name "-j" jobs]
