opam-version: "2.0"
name: "commons"
version: "1.5.5"
synopsis: "Yet another set of common utilities"
description: """
This is a small library of utilities used by Semgrep and
a few other projects developed at r2c.
"""

maintainer: "Yoann Padioleau <pad@r2c.dev>"
authors: [ "Yoann Padioleau <pad@r2c.dev>" ]
license: "LGPL-2.1-only"
homepage: "https://semgrep.dev"
dev-repo: "git+https://github.com/returntocorp/semgrep"
bug-reports: "https://github.com/returntocorp/semgrep/issues"

depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "3.2.0" }
  "alcotest" {>= "1.5.0"}
  "ANSITerminal" {>= "0.8.4"}
  "easy_logging" {>= "0.8.1" }
  "easy_logging_yojson" {>= "0.8.1" }
  "yojson" {>= "1.7.0"}
  "re" {>= "1.10.4"}
  "ppxlib" {>= "0.25.0"}
  "ppx_deriving" {>= "5.2.1"}
]

build: ["dune" "build" "-p" name "-j" jobs]
