; The default combination of flags is ':standard', which is made of the
; following options:
;  -w @1..3@5..28@30..39@43@46..47@49..57@61..62-40 -strict-sequence
;  -strict-formats -short-paths -keep-locs
; The documentation for the warning numbers is available at:
; https://v2.ocaml.org/manual/comp.html#s%3Acomp-options
;
; We considered disabling the '-short-paths' option due to bad aliases
; being shown in type hints and error messages, but the alternative also
; picks arbitrary aliases. Instead, we use '-short-paths' and prefix
; our type aliases with 'a_' as a workaround.
; See issue https://github.com/ocaml/ocaml/issues/10432 for details.
;
(env
  (_
    ; -6 is to allow to omit labels in function application
    ; -52 is to allow to match on Failure "precise_string"
    ; -58 is to allow missing cmx files (only a problem with Dyp)
    (flags (:standard  -w -6-52-58))
    ; TODO: I've tried this, but this does not work so I've added --table in
    ; the few dune files using menhir
    ;(menhir_flags (--table))
    ))

; coupling: if you modify this, you probably need to modify the core-cache
; regexps in .github/workflow/tests.yml passed to the hashFiles function
(dirs
  src
  libs
  tools
  languages
  tests ; todo, should move out Test.ml out of the tests/ data dir
  js ; consider commenting this if the default compilation time is too much
)

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; Don't build executables for the submodules that we only use as libraries.
; - Saves a tiny bit of build time (about 3-4%).
; - Keeps the bin/ folder clean.
;
; To update the list of directories below, just look at the current content
; of bin/ and spot the parse-xxx binaries and add a subdir entry for it
; to not build it.
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(subdir
   libs/ocaml-tree-sitter-core/src/gen
   (data_only_dirs bin)
)

; Unfortunately, 'subdir' doesn't expand wildcards.
;(subdir
;   languages/*/tree-sitter/semgrep-*
;   (data_only_dirs bin)
;)

(subdir
   languages/bash/tree-sitter/semgrep-bash
   (data_only_dirs bin)
)

(subdir
   languages/c/tree-sitter/semgrep-c
   (data_only_dirs bin)
)

(subdir
   languages/cpp/tree-sitter/semgrep-cpp
   (data_only_dirs bin)
)

(subdir
   languages/csharp/tree-sitter/semgrep-c-sharp
   (data_only_dirs bin)
)

(subdir
   languages/tree-sitter-lang/semgrep-dart
   (data_only_dirs bin)
)

(subdir
   languages/dockerfile/tree-sitter/semgrep-dockerfile
   (data_only_dirs bin)
)

(subdir
   languages/elixir/tree-sitter/semgrep-elixir
   (data_only_dirs bin)
)

(subdir
   languages/go/tree-sitter/semgrep-go
   (data_only_dirs bin)
)

(subdir
   languages/tree-sitter-lang/semgrep-hack
   (data_only_dirs bin)
)

(subdir
   languages/terraform/tree-sitter/semgrep-hcl
   (data_only_dirs bin)
)

(subdir
   languages/html/tree-sitter/semgrep-html
   (data_only_dirs bin)
)

(subdir
   languages/java/tree-sitter/semgrep-java
   (data_only_dirs bin)
)

(subdir
   languages/javascript/tree-sitter/semgrep-javascript
   (data_only_dirs bin)
)
; no json, reusing javascript

(subdir
   languages/julia/tree-sitter/semgrep-julia
   (data_only_dirs bin)
)

(subdir
   languages/jsonnet/tree-sitter/semgrep-jsonnet
   (data_only_dirs bin)
)

(subdir
   languages/kotlin/tree-sitter/semgrep-kotlin
   (data_only_dirs bin)
)

(subdir
   languages/lisp/tree-sitter/semgrep-clojure
   (data_only_dirs bin)
)

(subdir
   languages/lua/tree-sitter/semgrep-lua
   (data_only_dirs bin)
)

(subdir
   languages/ocaml/tree-sitter/semgrep-ocaml
   (data_only_dirs bin)
)

(subdir
   languages/php/tree-sitter/semgrep-php
   (data_only_dirs bin)
)

(subdir
   languages/python/tree-sitter/semgrep-python
   (data_only_dirs bin)
)

(subdir
   languages/r/tree-sitter/semgrep-r
   (data_only_dirs bin)
)

(subdir
   languages/ruby/tree-sitter/semgrep-ruby
   (data_only_dirs bin)
)

(subdir
   languages/rust/tree-sitter/semgrep-rust
   (data_only_dirs bin)
)

; no tree-sitter yet for scala

(subdir
   languages/solidity/tree-sitter/semgrep-solidity
   (data_only_dirs bin)
)

(subdir
   languages/tree-sitter-lang/semgrep-sqlite
   (data_only_dirs bin)
)

(subdir
   languages/swift/tree-sitter/semgrep-swift
   (data_only_dirs bin)
)

(subdir
   languages/typescript/tree-sitter/semgrep-tsx
   (data_only_dirs bin)
)

(subdir
   languages/typescript/tree-sitter/semgrep-typescript
   (data_only_dirs bin)
)

(subdir
   languages/tree-sitter-lang/semgrep-vue
   (data_only_dirs bin)
)
